[MOD-151] The pending order bar has alignment issue [MOD-152] The pending order overlay has a colon for the standing order name
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@80070 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/global/pendingOrder.css
+++ b/projects/Media/docroot/assets/css/global/pendingOrder.css
@@ -11,7 +11,7 @@
 }
 .pendingOrderBar-cont {
 	text-align: center;
-	/* padding: 12px 0 0 0; */
+	padding: 12px 0 0 0;
 	font-size: 16px;
 	background-color: #666;
 	color: #fff;
@@ -169,6 +169,12 @@
 }
 .pendingOrderBar-overlay-order-detail-ordnum-label:after {
 	content: ':';
+}
+.pendingOrderBar-overlay-order-detail-ordnum-label.label-SO {
+	display: none;
+}
+.pendingOrderBar-overlay-order-detail-ordnum-label.label-SO:after {
+	content: '';
 }
 .pendingOrderBar-overlay-order-detail-right {
 	width: 145px;
